# GCES-Trabalho-Individual-2023-1

./: Dockerfile  README.md
.github/workflows/: main.yml
docs/.github/workflows/: main.yml
src/: pyproject.toml
src/docs/: approaches.rst  conf.py  dataloaders.rst  import_classification.rst  load_base_args.rst  networks.rst  w2v_util.rst
src/docs/_build/doctrees/: approaches.doctree  config.doctree  dataloaders.doctree  environment.pickle  import_classification.doctree  index.doctree  load_base_args.doctree  modules.doctree  networks.doctree  nlp_data_utils.doctree  preparation.doctree  run.doctree  utils.doctree  w2v_util.doctree
src/docs/_build/html/: .buildinfo  approaches.html  config.html  dataloaders.html  genindex.html  import_classification.html  index.html  load_base_args.html  modules.html  networks.html  nlp_data_utils.html  objects.inv  preparation.html  py-modindex.html  run.html  search.html  searchindex.js  utils.html  w2v_util.html
src/docs/_build/html/_modules/: config.html  index.html  utils.html  w2v_util.html
src/docs/_build/html/_sources/: index.rst.txt  modules.rst.txt  nlp_data_utils.rst.txt
