[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Percon12 <fcorreiaandrade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
blas = "1.0"
boto3 = "1.18.21"
botocore = "1.21.41"
brotlipy = "0.7.0"
bzip2 = "1.0.8"
ca-certificates = "2021.10.26"
certifi = "2021.10.8"
cffi = "1.14.6"
charset-normalizer = "2.0.4"
click = "8.0.3"
cryptography = "35.0.0"
cudatoolkit = "11.0.221"
ffmpeg = "4.3"
filelock = "3.3.2"
freetype = "2.11.0"
giflib = "5.2.1"
gmp = "6.2.1"
gnutls = "3.6.15"
huggingface-hub = "0.1.1"
idna = "3.2"
importlib-metadata = "4.8.1"
intel-openmp = "2021.4.0"
jmespath = "0.10.0"
joblib = "1.1.0"
jpeg = "1.0.0"
lame = "3.100"
lcms2 = "2.12"
ld_impl_linux-64 = "2.35.1"
libffi = "3.3"
libgcc-ng = "9.3.0"
libgfortran-ng = "7.5.0"
libgfortran4 = "7.5.0"
libgomp = "9.3.0"
libiconv = "1.15"
libidn2 = "2.3.2"
libpng = "1.6.37"
libstdcxx-ng = "9.3.0"
libtasn1 = "4.16.0"
libtiff = "4.2.0"
libunistring = "0.9.10"
libuv = "1.40.0"
libwebp = "1.2.0"
libwebp-base = "1.2.0"
lz4-c = "1.9.3"
mkl = "2021.4.0"
mkl-service = "2.4.0"
mkl_fft = "1.3.1"
mkl_random = "1.2.2"
ncurses = "6.3"
nettle = "3.7.3"
ninja = "1.10.2"
numpy = "1.21.2"
numpy-base = "1.21.2"
olefile = "0.46"
openh264 = "2.1.0"
openssl = "1.1.1"
packaging = "21.2"
pillow = "8.4.0"
pip = "21.0.1"
pycparser = "2.20"
pyopenssl = "21.0.0"
pyparsing = "2.4.7"
pysocks = "1.7.1"
python = "3.7.11"
python-dateutil = "2.8.2"
pytorch = "1.7.0"
pytorch-mutex = "1.0"
pyyaml = "6.0"
quadprog = "0.1.10"
readline = "8.1"
regex = "2021.8.3"
requests = "2.26.0"
s3transfer = "0.5.0"
sacremoses = "0.0.43"
scikit-learn = "1.0.1"
scipy = "1.7.1"
setuptools = "58.0.4"
six = "1.16.0"
sqlite = "3.36.0"
threadpoolctl = "2.2.0"
tk = "8.6.11"
tokenizers = "0.10.3"
torchaudio = "0.7.0"
torchvision = "0.8.1"
tqdm = "4.62.3"
transformers = "4.10.2"
typing_extensions = "3.10.0.2"
urllib3 = "1.26.7"
wheel = "0.37.0"
xz = "5.2.5"
zipp = "3.6.0"
zlib = "1.2.11"
zstd = "1.4.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
